@@ -6,6 +6,7 @@ ap-northeast-3
 ap-south-1
 ap-southeast-1
 ap-southeast-2
+ap-southeast-3
 ca-central-1
 eu-central-1
 eu-north-1
