@@ -1,6 +1,7 @@
 Revision history for Perl extension aws-lambda
 
 {{$NEXT}}
+    - Asia Pacific (Jakarta) Region ap-southeast-3 is available
 
 0.0.33 2021-11-22T00:18:42Z
     - add missing dependency expat
